UI Clarity & Tracking Fix: Explicitly label Skro support and always append sub1

--- a/dashboard.html
+++ b/dashboard.html
@@ -215,11 +215,11 @@
             <hr style="margin: 25px 0; border:0; border-top:1px solid #eee;">
 
             <!-- Postback & Pixels (Retained logic) -->
-            <label>Postback Integration</label>
+            <label>Traffic Source / Pixel</label>
             <select id="pbType" onchange="pbChange()">
-                <option value="s2s">S2S (Skro Auto)</option>
-                <option value="facebook">Facebook</option>
-                <option value="tiktok">TikTok</option>
+                <option value="s2s">No Pixel (Skro Only)</option>
+                <option value="facebook">Facebook (+ Skro)</option>
+                <option value="tiktok">TikTok (+ Skro)</option>
             </select>
 
             <div id="pixelFields"
