--- a/dashboard.html
+++ b/dashboard.html
@@ -283,6 +283,51 @@
             </div>
         </div>
 
+        <!-- Admin Panel (Hidden by default) -->
+        <div id="adminPanel" class="full-width card" style="display:none; border-top: 4px solid #dc3545;">
+            <h2>👑 Admin Panel - User Management</h2>
+
+            <div style="display:grid; grid-template-columns: 1fr 1fr; gap:20px;">
+                <!-- User List -->
+                <div>
+                    <h3>Users List</h3>
+                    <table style="width:100%; border-collapse: collapse; font-size:13px;">
+                        <thead>
+                            <tr style="background:#f8f9fa; text-align:left;">
+                                <th style="padding:8px; border-bottom:1px solid #ddd;">ID</th>
+                                <th style="padding:8px; border-bottom:1px solid #ddd;">Username</th>
+                                <th style="padding:8px; border-bottom:1px solid #ddd;">Role</th>
+                                <th style="padding:8px; border-bottom:1px solid #ddd;">Action</th>
+                            </tr>
+                        </thead>
+                        <tbody id="userListBody"></tbody>
+                    </table>
+                </div>
+
+                <!-- Create User -->
+                <div style="background:#f8f9fa; padding:15px; border-radius:5px;">
+                    <h3>Create New User</h3>
+                    <div style="margin-bottom:10px;">
+                        <label>Username</label>
+                        <input id="newUsername" placeholder="Enter username">
+                    </div>
+                    <div style="margin-bottom:10px;">
+                        <label>Password</label>
+                        <input id="newPassword" type="password" placeholder="Enter password">
+                    </div>
+                    <div style="margin-bottom:10px;">
+                        <label>Role</label>
+                        <select id="newRole">
+                            <option value="user">User (Standard)</option>
+                            <option value="admin">Admin (Full Access)</option>
+                        </select>
+                    </div>
+                    <button onclick="createUser()" style="background:#28a745;">Create User</button>
+                    <div id="adminMsg" style="margin-top:10px; font-size:13px; color:red;"></div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <script>
@@ -409,12 +454,115 @@
             } catch (e) { }
         }
 
-        // Init
-        loadData();
-        checkStatus();
-        loadHistory();
-        setInterval(checkStatus, 5000);
+        // Auth functions
+        async function getCurrentUser() {
+            try {
+                const res = await fetch('/api/me');
+                if (res.status === 200) {
+                    const data = await res.json();
+                    if (data.status === 'ok') {
+                        const user = data.user;
+                        document.getElementById('userInfo').textContent = `👤 ${user.username} (${user.role})`;
+
+                        // Show admin panel if admin
+                        if (user.role === 'admin') {
+                            document.getElementById('adminPanel').style.display = 'block';
+                            loadUsers();
+                        }
+                    }
+                } else {
+                    window.location.href = '/login.html';
+                }
+            } catch (e) {
+                console.error("Auth check failed", e);
+            }
+        }
+
+        // Admin functions
+        async function loadUsers() {
+            try {
+                const res = await fetch('/api/admin/users').then(r => r.json());
+                if (res.status === 'ok') {
+                    const tbody = document.getElementById('userListBody');
+                    tbody.innerHTML = '';
+                    res.users.forEach(u => {
+                        tbody.innerHTML += `
+                            <tr style="border-bottom:1px solid #eee;">
+                                <td style="padding:8px;">${u.id}</td>
+                                <td style="padding:8px;">${u.username}</td>
+                                <td style="padding:8px;"><span style="background:${u.role === 'admin' ? '#ffd700' : '#e2e6ea'}; padding:2px 6px; border-radius:4px; font-size:11px;">${u.role}</span></td>
+                                <td style="padding:8px;">
+                                    ${u.id !== 1 ? `<button onclick="deleteUser(${u.id})" style="background:#dc3545; padding:5px 10px; font-size:12px; margin:0; width:auto;">Delete</button>` : ''}
+                                </td>
+                            </tr>
+                        `;
+                    });
+                }
+            } catch (e) { console.error(e); }
+        }
+
+        async function createUser() {
+            const username = document.getElementById('newUsername').value;
+            const password = document.getElementById('newPassword').value;
+            const role = document.getElementById('newRole').value;
+            const msg = document.getElementById('adminMsg');
+
+            if (!username || !password) {
+                msg.textContent = "Username and password required";
+                return;
+            }
+
+            try {
+                const res = await fetch('/api/admin/users/create', {
+                    method: 'POST',
+                    body: JSON.stringify({ username, password, role })
+                }).then(r => r.json());
+
+                if (res.status === 'ok') {
+                    msg.style.color = 'green';
+                    msg.textContent = "User created!";
+                    document.getElementById('newUsername').value = '';
+                    document.getElementById('newPassword').value = '';
+                    loadUsers();
+                } else {
+                    msg.style.color = 'red';
+                    msg.textContent = res.message;
+                }
+            } catch (e) { msg.textContent = "Error creating user"; }
+        }
+
+        async function deleteUser(id) {
+            if (!confirm('Are you sure you want to delete this user?')) return;
+            try {
+                const res = await fetch('/api/admin/users/delete', {
+                    method: 'POST',
+                    body: JSON.stringify({ user_id: id })
+                }).then(r => r.json());
+
+                if (res.status === 'ok') loadUsers();
+                else alert(res.message);
+            } catch (e) { alert("Error deleting user"); }
+        }
+
+        async function logout() {
+            try {
+                await fetch('/api/logout', { method: 'POST' });
+                window.location.href = '/login.html';
+            } catch (e) {
+                alert('Logout failed');
+            }
+        }
+
+        window.onload = function () {
+            getCurrentUser();
+            loadData();
+            loadHistory();
+            getStats();
+            // Auto-refresh stats every 60s
+            setInterval(getStats, 60000);
+        }
     </script>
 </body>
 
 </html>
+```
